--- a/assets/styles/pc.css
+++ b/assets/styles/pc.css
@@ -321,7 +321,7 @@ main {
   width: 100%;
   padding: 0.75rem 0;
   border: none;
-  border-top: 1px solid #eeeeee;
+  border-top: 1.5px solid #eeeeee;
   background: #ffffff;
   color: #444444;
   cursor: pointer;
@@ -1232,8 +1232,16 @@ body {
   margin-top: 0.0625rem;
 }
 
+#monthPurchaseModal {
+  pointer-events: none;
+}
 #monthPurchaseModal .modal-dialog {
   max-width: 30rem;
+  pointer-events: auto;
+}
+
+#minOrderModal .modal-dialog {
+  min-width: 25rem;
 }
 
 .layer-popup {
@@ -1296,7 +1304,7 @@ body {
 .layer-popup .popup-body {
   position: relative;
   flex: 1 1 auto;
-  padding: 0 1.5rem 2rem;
+  padding: 0 1.5rem 1.5rem;
   font-size: 0.875rem;
   line-height: 150%;
   color: #888888;
@@ -1327,9 +1335,9 @@ body {
   width: 100%;
   gap: 0.5rem;
 }
-.layer-popup .popup-footer .btn-group-half .btn-area {
+.layer-popup .popup-footer .btn-area {
+  display: flex;
   flex: 1;
-  width: 50%;
 }
 .layer-popup .popup-footer .btn-popup {
   width: 100%;
@@ -1341,6 +1349,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1;
   cursor: pointer;
 }
 .layer-popup .popup-footer .btn-popup.btn-gray {
@@ -1351,6 +1360,11 @@ body {
   background-color: #ffe400;
   color: #444444;
   font-weight: 600;
+}
+
+body.modal-open {
+  overflow: auto !important;
+  padding-right: 0 !important;
 }
 
 .custom-toast-container {
@@ -1600,6 +1614,7 @@ body {
   position: relative;
   margin: 0;
   transition: all 0.2s;
+  z-index: 1100;
 }
 .search-container .search-box {
   position: relative;
@@ -1631,6 +1646,7 @@ body {
   background: transparent;
   padding: 0.5rem;
   cursor: pointer;
+  z-index: 1005;
   color: #444444;
   display: flex;
   align-items: center;
@@ -1681,7 +1697,7 @@ body {
 }
 .search-container.active .search-input {
   border: 2px solid #ffbb33;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1.5px solid #ffffff;
   border-bottom: none;
   padding-bottom: 2px;
   border-radius: 0.25rem 0.25rem 0 0;
@@ -1854,7 +1870,7 @@ body {
   padding: 1.5rem;
   padding-bottom: 0;
   min-height: 18.75rem;
-  border-top: 1px solid #eeeeee;
+  border-top: 1.5px solid #eeeeee;
 }
 .search-dropdown .search-column {
   flex: 1;
@@ -2027,7 +2043,7 @@ body {
   letter-spacing: -0.5px;
 }
 .search-dropdown .search-footer {
-  border-top: 1px solid #eeeeee;
+  border-top: 1.5px solid #eeeeee;
   padding: 0.75rem 1.5rem;
   text-align: right;
 }
@@ -2052,7 +2068,7 @@ body {
   min-height: 23.75rem;
   width: 100%;
   box-sizing: border-box;
-  border-top: 1px solid #eeeeee;
+  border-top: 1.5px solid #eeeeee;
 }
 .search-dropdown .search-dropdown-autocomplete .autocomplete-column {
   flex: 1;
@@ -2493,9 +2509,18 @@ body {
 
 .section-wrapper {
   width: 100%;
-  border-bottom: 1px solid #f4f4f4;
+  border-bottom: 1.5px solid #f4f4f4;
   margin-bottom: 5rem;
   padding-bottom: 5rem;
+}
+.section-wrapper.brand-club-zone {
+  margin-bottom: 0;
+  border-bottom: 0;
+}
+.section-wrapper.notice {
+  border-bottom: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .section-container {
@@ -2591,7 +2616,7 @@ body {
   margin-top: 1.25rem;
 }
 .ranking-list .ranking-item {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1.5px solid #eeeeee;
 }
 .ranking-list .ranking-item .ranking-header {
   padding: 1.5rem 0.625rem;
@@ -2822,6 +2847,76 @@ body {
   display: none;
 }
 
+.notice * {
+  line-height: 150%;
+}
+.notice .notice-board-wrap {
+  display: flex;
+  overflow: hidden;
+}
+.notice .notice-board-wrap .notice-item {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  padding: 0.8125rem 0;
+}
+.notice .notice-board-wrap .notice-item:first-child {
+  padding-right: 2.5rem;
+  margin-right: 2.5rem;
+}
+.notice .notice-board-wrap .notice-item .notice-cate {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  flex-shrink: 0;
+  margin-right: 1rem;
+}
+.notice .notice-board-wrap .notice-item .notice-cate span {
+  font-family: "Pretendard", sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #444444;
+  line-height: 1.5;
+}
+.notice .notice-board-wrap .notice-item .notice-cate svg path {
+  fill: #444444;
+}
+.notice .notice-board-wrap .notice-item .notice-content {
+  flex: 0.85;
+  display: flex;
+  align-items: center;
+  min-width: 0;
+}
+.notice .notice-board-wrap .notice-item .notice-content .subject {
+  flex: 1;
+  font-size: 0.875rem;
+  color: #aaaaaa;
+  text-decoration: none;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 0.75rem;
+}
+.notice .notice-board-wrap .notice-item .notice-content .subject:hover {
+  text-decoration: underline;
+}
+.notice .notice-board-wrap .notice-item .notice-content .date {
+  flex-shrink: 0;
+  font-size: 0.875rem;
+  color: #aaaaaa;
+  position: relative;
+  padding-left: 0.75rem;
+}
+.notice .notice-board-wrap .notice-item .notice-content .date::before {
+  content: "•";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #aaaaaa;
+  font-size: 0.625rem;
+}
+
 .cart-page {
   padding-top: 2.5rem;
   font-weight: 600;
@@ -2882,7 +2977,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding-bottom: 0.75rem;
-  border-bottom: 1px solid #222222;
+  border-bottom: 1.5px solid #222222;
   margin-bottom: 0rem;
 }
 .cart-page .control-bar .left-controls {
@@ -2920,6 +3015,23 @@ body {
 .cart-page .right-controls .btn-excel-upload:hover {
   background-color: #eeeeee;
   border-color: #999999;
+}
+.cart-page.empty-cart .page-title .count {
+  color: #aaaaaa;
+}
+.cart-page.empty-cart .category-tabs .count {
+  color: #aaaaaa !important;
+}
+.cart-page.empty-cart .cart-sidebar .sel-count,
+.cart-page.empty-cart .cart-sidebar .price-val,
+.cart-page.empty-cart .cart-sidebar .sel-count-sm {
+  color: #aaaaaa !important;
+}
+.cart-page.empty-cart .cart-sidebar .price-row.total span {
+  color: #444444 !important;
+}
+.cart-page.empty-cart .cart-sidebar .price-row.total .total-val {
+  color: #aaaaaa !important;
 }
 
 .custom-checkbox-wrap {
@@ -3004,7 +3116,7 @@ body {
 }
 .cart-section .section-title-group {
   padding-bottom: 0.625rem;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1.5px solid #eeeeee;
 }
 .cart-section .section-title-checkbox {
   display: flex;
@@ -3018,6 +3130,36 @@ body {
   margin-left: 0.5rem;
   color: #222222;
 }
+.cart-section .qty-box {
+  border: 0 !important;
+  background: #FAFAFA;
+}
+
+.cart-section.empty-list {
+  display: flex;
+  padding: 2.875rem 1.5rem;
+  padding-top: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  flex: 1 0 0;
+  align-self: stretch;
+  border-bottom: 1.5px solid #eeeeee !important;
+}
+.cart-section.empty-list .empty-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.cart-section.empty-list .empty-list svg.cart-gray {
+  color: #cccccc;
+}
+.cart-section.empty-list .empty-list .empty-list-text {
+  font-size: 0.875rem;
+  color: #aaaaaa;
+}
 
 .cart-item {
   display: flex;
@@ -3025,7 +3167,7 @@ body {
   padding: 1.5rem 0;
 }
 .cart-item:not(:last-of-type) {
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1.5px solid #eeeeee;
 }
 .cart-item > div:not(:first-of-type) {
   padding-top: 0.375rem !important;
@@ -3297,7 +3439,7 @@ body {
 .summary-sidebar .summary-box .summary-body .price-row.first-row {
   margin-bottom: 1rem;
   padding-bottom: 1.25rem;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1.5px solid #eeeeee;
   font-size: 1.25rem;
   font-weight: 700;
 }
@@ -3315,7 +3457,7 @@ body {
 .summary-sidebar .summary-box .summary-body .price-row.border-top {
   margin-top: 1.25rem;
   padding-top: 1.25rem;
-  border-top: 1px solid #eeeeee;
+  border-top: 1.5px solid #eeeeee;
 }
 .summary-sidebar .summary-box .summary-body .price-row.total {
   margin-top: 0.5rem;
@@ -3586,7 +3728,7 @@ body {
   margin-top: 0.625rem;
   padding-top: 0.625rem;
   padding-bottom: 1.5rem;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1.5px solid #eeeeee;
 }
 .search-result-page .search-top-area .search-control-row .left-col {
   display: flex;
@@ -3916,17 +4058,27 @@ body {
 }
 .search-result-page .product-card.state-dimmed .card-control.sold-out *:disabled,
 .search-result-page .product-card.state-dimmed .card-control.sold-out .qty-box {
+  cursor: default;
   background: #f4f4f4;
+}
+.search-result-page .product-card.state-dimmed .card-control.sold-out *:disabled.btn-icon:hover,
+.search-result-page .product-card.state-dimmed .card-control.sold-out .qty-box.btn-icon:hover {
+  border-color: #cccccc;
 }
 .search-result-page .product-card.state-dimmed .card-control.sold-out input,
 .search-result-page .product-card.state-dimmed .card-control.sold-out svg:not(.icon-heart) {
   color: #aaaaaa;
+  pointer-events: none;
+}
+.search-result-page .product-card.state-dimmed .card-control.sold-out input:focus,
+.search-result-page .product-card.state-dimmed .card-control.sold-out svg:not(.icon-heart):focus {
+  outline: none;
 }
 .search-result-page .product-grid-4.list-view {
   display: flex !important;
   flex-direction: column !important;
   gap: 0 !important;
-  border-top: 1px solid #222222;
+  border-top: 1.5px solid #222222;
 }
 .search-result-page .product-grid-4.list-view .product-card {
   display: flex !important;
@@ -3934,7 +4086,7 @@ body {
   align-items: center;
   width: 100%;
   padding: 1.25rem 0.625rem;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1.5px solid #eeeeee;
   margin: 0;
   height: auto !important;
 }
@@ -3966,7 +4118,6 @@ body {
   display: none !important;
 }
 .search-result-page .product-grid-4.list-view .product-card .card-thumb .status-overlay {
-  display: block !important;
   font-size: 0.875rem !important;
   white-space: nowrap;
   width: 100%;
@@ -3974,6 +4125,42 @@ body {
 }
 .search-result-page .product-grid-4.list-view .product-card .card-thumb .delivery-tags {
   display: none !important;
+}
+.search-result-page .product-grid-4.list-view .product-card .card-thumb .status-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  position: absolute;
+  bottom: -16%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 15;
+  width: 76%;
+  color: #ffffff;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.search-result-page .product-grid-4.list-view .product-card .card-thumb .status-overlay .btn-substitute {
+  flex: 1;
+  min-height: 2.375rem;
+  width: 100%;
+  background-color: #ffffff;
+  border: 1.5px solid #444444;
+  border-radius: 0.25rem;
+  font-size: 1rem;
+  color: #444444;
+  cursor: pointer;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s ease;
+}
+.search-result-page .product-grid-4.list-view .product-card .card-thumb .status-overlay .btn-substitute:hover {
+  background-color: #eeeeee;
+  border-color: #999999;
 }
 .search-result-page .product-grid-4.list-view .product-card .card-info {
   flex-grow: 1;
