--- a/assets/styles/pc/pages/_search.scss
+++ b/assets/styles/pc/pages/_search.scss
@@ -508,13 +508,12 @@
         }
 
         .product-name {
-            font-size: rem(16);
+            font-size: rem(20);
             font-weight: 600;
             color: $black;
-            margin-bottom: rem(8);
+            margin-bottom: rem(4);
             line-height: 1.4;
             height: auto;
-            min-height: rem(44);
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 2;
@@ -626,22 +625,20 @@
                     }
                 }
             }
-
-
         }
     }
 
     // 리스트 보기 수정자
     .product-grid-4.list-view {
         // 컨테이너 그리드 레이아웃 덮어쓰기
-        display: flex !important;
-        flex-direction: column !important;
-        gap: 0 !important;
+        display: flex;
+        flex-direction: column;
+        gap: 0;
         border-top: 1.5px solid $black; // 리스트 보기 상단 테두리
 
         .product-card {
-            display: flex !important;
-            flex-direction: row !important;
+            display: flex;
+            flex-direction: row;
             align-items: center; // 수직 중앙 정렬
             width: 100%;
             padding: rem(20) rem(10);
@@ -795,7 +792,7 @@
 
                     input {
                         width: calc(100% - #{rem(64)});
-                        height: 100%;
+                        height: calc(100% - rem(2)) !important;
                         border: none;
                         text-align: center;
                         font-size: rem(15);
@@ -821,6 +818,37 @@
             // 하단 정보 숨김 (간결한 리스트)
             .bottom-info {
                 display: none !important;
+            }
+        }
+
+        .card-control {
+            display: flex;
+            gap: rem(8);
+
+            &.sold-out {
+
+                *:disabled,
+                .qty-box {
+                    cursor: default;
+                    background: $gray-50;
+
+                    &.btn-icon {
+                        &:hover {
+                            border-color: $gray-200;
+                        }
+                    }
+                }
+
+                input,
+                svg:not(.icon-heart) {
+
+                    color: $gray-300;
+                    pointer-events: none;
+
+                    &:focus {
+                        outline: none;
+                    }
+                }
             }
         }
     }
@@ -871,6 +899,82 @@
 
 
 
+
+    // 검색 결과 그리드
+    .product-grid-4 {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: rem(24);
+        margin-top: rem(20);
+
+        &.list-view {
+            grid-template-columns: 1fr; // 리스트 모드 (List View)
+            gap: rem(12);
+
+            .product-card {
+                flex-direction: row;
+                height: rem(180);
+                padding: rem(20);
+                gap: rem(24);
+                align-items: center;
+                border-bottom: 1px solid $gray-200;
+
+                .card-thumb {
+                    width: rem(140);
+                    height: rem(140);
+                    flex-shrink: 0;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+
+                .card-info {
+                    flex: 1;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+
+                    .product-name {
+                        font-size: rem(18);
+                        margin-bottom: rem(4);
+                    }
+
+                    .unit-info {
+                        margin-top: 0;
+                        margin-bottom: rem(4);
+                    }
+
+                    .total-price-area {
+                        margin-top: 0;
+
+                        .price {
+                            font-size: rem(24);
+                        }
+                    }
+                }
+
+                .card-control {
+                    // width: rem(120);
+                    max-width: rem(240);
+                    flex-direction: row;
+                    gap: rem(12);
+                    margin-top: 0;
+
+                    .qty-box {
+                        width: 100%;
+                    }
+                }
+
+                .bottom-info {
+                    display: none; // 리스트 뷰에서는 하단 정보 간소화
+                }
+            }
+        }
+    }
 
     // 페이지네이션
     .pagination-container {
